src/test/deca/syntax/invalid/sansObjet/BadPrintWithMutilpleSimpleQuotes.deca
{
    print('Asslema','ca va?','Bien');
}